--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	</properties>
 	<dependencies>
-		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-webmvc</artifactId> 
+		<!--  this is commnet <dependency> <groupId>org.springframework</groupId> <artifactId>spring-webmvc</artifactId> 
 			<version>${spring.version}</version> </dependency> -->
 
 		<dependency>
